# tree-sitter-ros-interface

./: .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  examples.repos  grammar.js  package-lock.json  package.json  parse-examples  pyproject.toml  setup.py  tree-sitter.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-ros-interface.pc.in
bindings/c/tree_sitter/: tree-sitter-ros-interface.h
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ros_interface/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
helix/: README.md  textobjects.scm
queries/: highlights.scm  injections.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: action.txt  annotation.txt  empty.txt  message.txt  service.txt  strings.txt
test/highlight/: ArrayDefault.msg  BasicTypesAndDefaults.msg  ConfusingStrings.srv  ConstantUnquoted.msg  CustomType.msg  FloatVaraints.msg  IntegerVariants.msg  SimpleAction.action  SimpleMessage.msg  SimpleService.msg  basic_types_and_defaults.msg
test/tags/: ConfusingStrings.srv  SimpleAction.action  SimpleMessage.msg  SimpleService.srv
